cdk8s/dist/create-ns-ando.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ando
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: arugocd
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: arugo-workflows
spec: {}
