cdk8s/dist/ns.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ando
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: argo-workflows
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: ubuntu
spec: {}
