cdk8s/dist/ubuntu-cdk8s.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-cdk8s
  namespace: ubuntu
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: ubuntu-cdk8s-ubuntu-c87f7104
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: ubuntu-cdk8s-ubuntu-c87f7104
    spec:
      automountServiceAccountToken: false
      containers:
        - command:
            - /bin/bash
          image: ubuntu
          imagePullPolicy: Always
          name: main
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          stdin: true
          tty: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
